add meta data to head and connect css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Grower's Gardens gardening club, Kildare, Ireland">
+    <meta name="keywords" content="grower's gardens, gardening club, kildare, ireland">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Grower's Gardens</title>
 </head>
 <body>
     <h1>Hello World!</h1>
