--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Grower's Gardens</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Header content</header>
+    <section>
+        Hero image
+    </section>
+    <section>
+        About us
+    </section>
+    <section>
+        Sign up
+    </section>
+    <footer>
+        Contact us
+    </footer>
 </body>
 </html>
