--- a/index.html
+++ b/index.html
@@ -11,17 +11,32 @@
     <title>Grower's Gardens</title>
 </head>
 <body>
-    <header>Header content</header>
+    <header>
+        <h1>Grower's Gardens</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#aboutus">About Us</a>
+                </li>
+                <li>
+                    <a href="#join">Join</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Hero image
     </section>
-    <section>
+    <section id="aboutus">
         About us
     </section>
-    <section>
-        Sign up
+    <section id="join">
+        Join
     </section>
-    <footer>
+    <footer id="contact">
         Contact us
     </footer>
 </body>
