--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 </head>
 <body>
     <header>
-        <h1>Grower's Gardens</h1>
+        <h1 id="logo">Grower's Gardens</h1>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="#aboutus">About Us</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li>
                     <a href="#join">Join</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#aboutus">About Us</a>
                 </li>
             </ul>
         </nav>
     </header>
     <section>
-        Hero image
+        <span id="hero-image"></span>
     </section>
     <section id="aboutus">
         About us
