add and style hero image

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <span id="hero-image"></span>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
     </section>
     <section id="aboutus">
         About us
