add tag line to hero image

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="tag-line">
+            <h2>Grower's Gardens</h2>
+            <p>Plant a little, Grow a lot</p>
+        </div>
     </section>
     <section id="aboutus">
         About us
