add and style about us section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,37 @@
         </div>
     </section>
     <section id="aboutus">
-        About us
+        <div>
+            <h2>About Us</h2>
+        </div>
+        <div>
+            <h3>Like minded, differently experienced. Teach or learn at your own pace.</h3>
+        </div>
+        <div>
+            <p>
+                Join our community of growers and reap the benefits of a fulfilling and rejuvenating return to nature.
+            </p>
+            <ul>
+                <li>Spend time in the outdoors</li>
+                <li>Engage the senses</li>
+                <li>Connect with others</li>
+                <li>Feed your friends</li>
+            </ul>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <th>Months</th>
+                    <th>Day</th>
+                    <th>Time</th>
+                </tr>
+                <tr>
+                    <th>Mar - Oct</th>
+                    <th>Saturdays</th>
+                    <th>10:30</th>
+                </tr>
+            </table>
+        </div>
     </section>
     <section id="join">
         Join
