--- a/index.html
+++ b/index.html
@@ -42,29 +42,28 @@
             <h3>Like minded, differently experienced. Teach or learn at your own pace.</h3>
         </div>
         <div>
-            <p>
-                Join our community of growers and reap the benefits of a fulfilling and rejuvenating return to nature.
-            </p>
-            <ul>
-                <li>Spend time in the outdoors</li>
-                <li>Engage the senses</li>
-                <li>Connect with others</li>
-                <li>Feed your friends</li>
-            </ul>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    <th>Months</th>
-                    <th>Day</th>
-                    <th>Time</th>
-                </tr>
-                <tr>
-                    <th>Mar - Oct</th>
-                    <th>Saturdays</th>
-                    <th>10:30</th>
-                </tr>
-            </table>
+            <span id="community">
+                <ul>
+                    <li>Spend time in the outdoors</li>
+                    <li>Engage the senses</li>
+                    <li>Connect with others</li>
+                    <li>Feed your friends</li>
+                </ul>
+            </span>
+            <span id="table">
+                <table>
+                    <tr>
+                        <th>Months</th>
+                        <th>Day</th>
+                        <th>Time</th>
+                    </tr>
+                    <tr>
+                        <th>Mar - Oct</th>
+                        <th>Saturdays</th>
+                        <th>10:30</th>
+                    </tr>
+                </table>
+            </span>
         </div>
     </section>
     <section id="join">
