add join content

--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
         </div>
     </section>
     <section id="join">
-        Join
+        <div>
+            <h2>Join Us</h2>
+            <form action="." target="_blank" novalidate>
+                <label for="fname">First name:</label><br>
+                <input type="text" name="fname" id="fname"><br>
+                <label for="lname">Last name:</label><br>
+                <input type="text" name="lname" id="lname"><br>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email"><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
     </section>
     <footer id="contact">
         Contact us
