--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <label for="fname">First name:</label><br>
                 <input type="text" name="fname" id="fname"><br>
                 <label for="lname">Last name:</label><br>
-                <input type="text" name="lname" id="lname"><br>
-                <label for="email">Email:</label>
+                <input type="text" name="lname" id="lname"><br><br>
+                <label for="email">Email:</label><br>
                 <input type="email" name="email" id="email"><br><br>
                 <input type="submit" value="Submit">
             </form>
