add footer content

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
         </div>
     </section>
     <footer id="contact">
-        Contact us
+        <ul>
+            <li>Contact us</li>
+            <li>Phone: 01 234 5678</li>
+            <li>Email: growersgardens@email.com</li>
+        </ul>
     </footer>
 </body>
 </html>
