--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
     </section>
     <footer id="contact">
-        <ul>
+        <ul class="contact-us">
             <li>Contact us</li>
             <li>Phone: 01 234 5678</li>
             <li>Email: growersgardens@email.com</li>
