alter style footer

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     </section>
     <footer id="contact">
         <ul class="contact-us">
-            <li>Contact us</li>
-            <li>Phone: 01 234 5678</li>
+            <li>Contact us</li><hr><hr>
+            <li>Phone: 01 234 5678</li><hr>
             <li>Email: growersgardens@email.com</li>
         </ul>
     </footer>
